mdapi/unpackaged/objects/Basecamp_Questionnaire_Response__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Questionnaire Responses</relationshipLabel>
        <relationshipName>Questionnaire_Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Number_Correct__c</fullName>
        <label>No. Correct</label>
        <summaryFilterItems>
            <field>Basecamp_Questionnaire_Answer__c.Correct__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Basecamp_Questionnaire_Answer__c.Questionnaire_Response__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Questionnaire__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Questionnaire</label>
        <referenceTo>Basecamp_Questionnaire__c</referenceTo>
        <relationshipLabel>Questionnaire Responses</relationshipLabel>
        <relationshipName>Questionnaire_Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Version</label>
        <referenceTo>Basecamp_Version__c</referenceTo>
        <relationshipLabel>Questionnaire Responses</relationshipLabel>
        <relationshipName>Questionnaire_Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>lottery_name__c</fullName>
        <formula>Account__r.PersonEmail</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>lottery name</label>
        <type>Text</type>
    </fields>
    <label>Questionnaire Response</label>
    <nameField>
        <displayFormat>QR-{0000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Questionnaire Responses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>